feat: a loading page is displayed on app start

--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,16 @@
       name="description"
       content="Bliss Application Frontend Recruitment Delivery by Felizardo Ntswambeni Massimbe"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,400;0,600;0,700;0,800;1,400&family=Roboto:wght@400;900&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0"
+    />
     <title>React App</title>
   </head>
   <body>
